Closed Bug 1724240 Opened 4 years ago Closed 4 years ago

If ECH is enabled and IPv6 not accessible HTTP/3 does not fallback to IPv4

Categories

(Core :: Networking: HTTP, defect, P2)

defect

Tracking

()

RESOLVED FIXED
92 Branch
Tracking Status
firefox92 --- fixed

People

(Reporter: dragana, Assigned: dragana)

References

(Blocks 2 open bugs)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

This is originally reported in bug 1700703 comment #35

Assignee: nobody → dd.mozilla
Status: NEW → ASSIGNED

Description what is happening:

  • HTTPS RR record is use and there is entry for HTTP/3
  • Firefox tries to connect to HTTP/3 over an IPv6 address but there is no IPv6 connectivity and no packet is received
  • the HTTP/3 fallback timer fires and Firefox try to connect to the same server over TCP also using IPv6
  • Normally here is a backup timer in case IPv6 does not work and Firefox needs to try IPv4, but in this case it is not set because the backup connection is a speculative connection :(

The solution is to setup the IPv4 backup timer if the connection is a fallback connection.

I will create a patch for this.

Pushed by ddamjanovic@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/47c413c03555 Setup fallback timer if a speculative connection is created for a fallback r=necko-reviewers,valentin
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: