Bug 1724240 - Setup fallback timer if a speculative connection is created for a fallback r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D121903